Updated the IdealIncrementalTest class to update the analysis results and also run the complete build on the updated code in order to compare the results